# CSCI471

./: LICENSE  README.md
Projects/01/: CMakeLists.txt  Makefile  README.md  README.txt
Projects/01/include/httpmuncher/: config.h.cmake  socket.h
Projects/01/include/httpmuncher/domain/: header.h  http_header.h  http_request_header.h  http_response_header.h
Projects/01/include/httpmuncher/response/: generic.h  status.h
Projects/01/include/httpmuncher/socket/: consumer.h  echo_consumer.h  header_consumer.h  header_producer.h  header_request_consumer.h  socket.h  status_consumer.h
Projects/01/include/httpmuncher/util/: extension.h  logging.h  messages.h  sig_handle.h  status.h
Projects/01/instructions_and_resources/: .gitignore  sampleCode.tar
Projects/01/lib/: CMakeLists.txt  main.cpp
Projects/01/lib/domain/: CMakeLists.txt  http_header.cpp  http_request_header.cpp  http_response_header.cpp
Projects/01/lib/socket/: CMakeLists.txt  header_consumer.cpp  header_producer.cpp  header_request_consumer.cpp  socket.cpp
Projects/02/: CMakeLists.txt  Makefile  README.md
Projects/02/include/dnsmuncher/: cache.h  config.h.cmake  dns.h
Projects/02/include/dnsmuncher/actors/: consumer.h  data_producer.h  dns_consumer.h  dns_producer.h  dns_response_consumer.h  echo_consumer.h
Projects/02/include/dnsmuncher/data/: convert.h  convert_all.h  dns_convert.h  name_convert.h  net_class_convert.h  question_convert.h  resource_record_convert.h
Projects/02/include/dnsmuncher/domain/: byte.h  cname_resource_record.h  dns.h  dns_builder.h  domain.h  name.h  net_class.h  ns_resource_record.h  qtype.h  question.h  resource_record.h  type.h
Projects/02/include/dnsmuncher/parse/: dns.h  ip.h
Projects/02/include/dnsmuncher/socket/: connect.h  consumer.h  echo_consumer.h  helper.h  listen.h  socket.h
Projects/02/include/dnsmuncher/util/: byte.h  byte_print.h  collection.h  logging.h  sig_handle.h  split.h
Projects/02/include/dnsmuncher/util/byte/: byte.h  convert.h  copy.h  print.h
Projects/02/lib/: CMakeLists.txt  dns.cpp  listen.cpp  main.cpp  main_helper.h
Projects/02/lib/actors/: CMakeLists.txt  consumer.cpp  dns_consumer.cpp  dns_producer.cpp  dns_response_consumer.cpp
Projects/02/lib/data/: CMakeLists.txt  dns_convert.cpp
Projects/02/lib/parse/: CMakeLists.txt  dns.cpp  dns_builder.h  ip.cpp  parse_context.h
Projects/02/lib/socket/: CMakeLists.txt  assist.h  connect.cpp  consumer.cpp  listen.cpp  messages.h  socket.cpp  socket_config.h
Projects/02/test/: CMakeLists.txt
Projects/02/test/dnsmuncher/: CMakeLists.txt
Projects/02/test/dnsmuncher/data/: CMakeLists.txt  data_test.cpp
Projects/02/test/dnsmuncher/parse/: CMakeLists.txt  parse_test.cpp
Projects/02/test/dnsmuncher/util/: CMakeLists.txt  util_test.cpp
Projects/02/test/include/: dns_common.h  file_names.h.cmake  test_helper.h
Projects/02/test/random/: CMakeLists.txt  random_test.cpp
Projects/02/test/resources/: CMakeLists.txt  file_names.h.cmake  response_a_intel  response_a_intel_without_link  response_complex_google
Projects/02/test/test-lib/gtest-1.7.0/: CMakeLists.txt
Projects/03/protocols/dns/: CMakeLists.txt
Projects/03/protocols/dns/include/dns/: dns.h
Projects/03/protocols/dns/lib/: CMakeLists.txt  dns.cpp  main.cpp  main_helper.h
Projects/03/protocols/dns/lib/actors/: CMakeLists.txt  dns_consumer.cpp  dns_producer.cpp  dns_response_consumer.cpp
Projects/03/protocols/dns/lib/parse/: CMakeLists.txt  dns.cpp  dns_parse_context.h  parse_context.h
Projects/03/protocols/dns/test/: CMakeLists.txt
Projects/03/protocols/dns/test/dns/: CMakeLists.txt
Projects/03/protocols/dns/test/include/: dns_common.h  file_names.h.cmake
Projects/03/protocols/dns/test/resources/: query_a_google  response_cname_amazon  response_nameserver_amazon
Projects/03/protocols/icmp/lib/: CMakeLists.txt  icmp.cpp  main.cpp
Projects/04/: .gitignore  CMakeLists.txt  Makefile  README.md
Projects/04/captures/: google_ping_via_verizon.pcap  random_tcp_traffic.pcapng
Projects/04/include/networkmuncher/actors/: actors.h  consumer.h  data_producer.h  echo_consumer.h  socket_consumer.h
Projects/04/include/networkmuncher/data/: convert.h  ip_addr_convert.h
Projects/04/include/networkmuncher/domain/: all.h  application_layer_protocol.h  ip_addr.h  link_layer_protocol.h  network_layer_protocol.h  protocol.h  protocol_types.h  ptr_types.h  transport_layer_protocol.h
Projects/04/include/networkmuncher/parse/: parser_types.h  parsers.h
Projects/04/include/networkmuncher/socket/: socket.h
Projects/04/include/networkmuncher/util/: math.h  sig_handle.h  split.h
Projects/04/instructions_and_resources/pcap/lib/: libpcap.so.1
Projects/04/instructions_and_resources/project4/: Makefile  project4  project4.cc  resultsC.cc  resultsC.h
Projects/04/lib/: CMakeLists.txt  echo.cpp
Projects/04/lib/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h  parse_hint.h  resultsC.cpp  resultsC.h
Projects/04/lib/logging/: CMakeLists.txt
Projects/04/lib/socket/: CMakeLists.txt  socket_config.h  socket_helper.h
Projects/04/protocols/: CMakeLists.txt
Projects/04/protocols/arp/: CMakeLists.txt
Projects/04/protocols/dns/: CMakeLists.txt
Projects/04/protocols/dns/lib/: dns.cpp  main.cpp
Projects/04/protocols/ethernet/: CMakeLists.txt
Projects/04/protocols/ethernet/test/: CMakeLists.txt
Projects/04/protocols/icmp/: CMakeLists.txt
Projects/04/protocols/icmp/lib/: CMakeLists.txt  icmp.cpp  main.cpp
Projects/04/protocols/ipv4/: CMakeLists.txt
Projects/04/protocols/ipv4/test/: CMakeLists.txt
Projects/04/protocols/ipv6/: CMakeLists.txt
Projects/04/protocols/ipv6/test/: CMakeLists.txt
Projects/04/protocols/tcp/: CMakeLists.txt
Projects/04/protocols/udp/: CMakeLists.txt
Projects/04/test/: CMakeLists.txt
Projects/04/test/include/: file_ops.h  test_helper.h
Projects/04/test/networkmuncher/: CMakeLists.txt
Projects/04/test/networkmuncher/data/: CMakeLists.txt
Projects/04/test/networkmuncher/parse/: CMakeLists.txt  parse_test.cpp
Projects/04/test/networkmuncher/util/: util_test.cpp
(+307 files in other folders)
